RW-1107  dropdown click load fixed

--- a/ui/src/app/cohort-search/condition-dropdown/condition-dropdown.component.html
+++ b/ui/src/app/cohort-search/condition-dropdown/condition-dropdown.component.html
@@ -9,7 +9,7 @@
                     id="criteria.type"
                     class="dropdown-item"
                     type="button"
-                    (click)="launchTree(criteria.name)"
+                    (click)="launchTree(criteria)"
                     clrDropdownItem>{{criteria.name}}</button>
         </ng-container>
 
