RW-1107  recommended changes

--- a/ui/src/app/cohort-review/annotation-item/annotation-item.component.css
+++ b/ui/src/app/cohort-review/annotation-item/annotation-item.component.css
@@ -99,7 +99,7 @@ input[type=text]:not([readonly]):focus {
   padding-bottom: 0.15rem;
 }
 
-.items-Integer {
+.items-integer {
   color:#224F83;
   font-weight: bold;
   padding-bottom: 0.15rem;
