--- a/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
+++ b/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
@@ -1,4 +1,4 @@
-<div class="db-page-spinner" *ngIf="loading" >
+<div class="db-page-spinner" *ngIf="loading()" >
   <span  class="spinner">
     Loading...
   </span>
