--- a/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
+++ b/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
@@ -4,7 +4,7 @@
   </span>
 </div>
 
-<div *ngIf="!loading" class="row concept-charts chart">
+<div *ngIf="!loading()" class="row concept-charts chart">
   <!-- show measurements binned by gender if we want -->
   <div class="col-md-4 col-xs-12 chart" *ngIf="showMeasurementGenderBins && analyses.measurementValueMaleAnalysis">
     <app-chart [chartType]="'histogram'" [chartTitle]="makeChartTitle(maleGenderResult)"
@@ -37,7 +37,7 @@
   </div>
 
   <!-- show sources totals  if we want -->
-  <div class="col-md-4 col-xs-12 chart"  *ngIf="showSources && ageAnalysis && sourceConcepts && sourceConcepts.length">
+  <div class="col-md-4 col-xs-12 chart"  *ngIf="showSources && sourceConcepts && sourceConcepts.length">
     <app-chart [concepts]="sourceConcepts" [sources]="true" [pointWidth]="20"
                [backgroundColor]="backgroundColor" [chartTitle]="'Sources'">
     </app-chart>
