[RW-1092] [risk = no] Review Right hand bar styling and functionality changes (#1117)
* RW-1092 css changes for sidebarcontent

* RW-1092 css changes for participant status header

* RW-1092 css changes for dropdown

*  RW-1092 particiapnt status clarity dropdown functionality changes

*  RW-1092 particiapnt status clarity dropdown lint errors fixes

*  RW-1092 particiapnt right bar arrow fixes

*  RW-1092 dropdown changes

*  RW-1092 dropdown value fixed with page navigation

*  RW-1092 dropdown value and date value changes

*  RW-1092 modal1st page layout

*  RW-1092 new layout for text and enumeration

*  RW-1092 new layout rightbar menu fixes

*  RW-1092 new layout rightbar menu padding fixes

*  RW-1092 modal fixes with attributes

*  RW-1092 cancel functionalirt changes with detect changes

*  RW-1092 save function changes with detect changes

*  RW-1092 anotation item lint error fixes

*  RW-1092 lint error fixes

*  RW-1092 lint error fixes

*  RW-1092 lint error fixes

*  RW-1092 lint error fixes

*  RW-1092 lint error fixes

*  RW-1092 on bluc calling method fixes

*  RW-1092 on bluc calling method fixes

*  RW-1092 on bluc calling method fixes

*  RW-1092 on bluc calling method fixes

*  RW-1092 on edit modal data update fixed

*  RW-1092 date field null check

*  RW-1092 date field null check

*  RW-1092 lint error fixes

*  RW-1092 spinner and success check fixes

*  RW-1092 code cleanup

*  RW-1092 spec file changes

*  RW-1092 spec lint error fixes

* [RW-1111][risk=no] adding visit type to modifiers (#1116)

* RW-1111 added encounters to modifiers.

* RW-1111 added unnest to in clause.

* [RISK=LOW][RW-1037]Integrate recently used resource caching (#1099)

* RW-1037

* RW-1111 added encounters to modifiers.

* RW-1111 added unnest to in clause.

*  RW-1092 spec lint error fixes

*  RW-1092 spec lint error fixes

*  RW-1092 spec lint error fixes

*  RW-1092 spec li

--- a/ui/src/app/cohort-review/detail-page/detail-page.css
+++ b/ui/src/app/cohort-review/detail-page/detail-page.css
@@ -2,18 +2,24 @@
   position: absolute;
   top: 1px;
   right: 0px;
-  border: 1px solid rgb(86, 86, 86);
+  /*border: 1px solid rgb(86, 86, 86);*/
   border-radius: 2px;
   height: 100%;
   z-index: 1;
-  background-color: rgb(250, 250, 250);
+  background-color: #E2E2EA;
   display: flex;
   margin-right: -0.6rem;
+
 }
 
 .sidebar-handle {
-  min-width: 24px;
-  background-color: rgb(230, 230, 230);
+  /*min-width: 24px;*/
+  background-color: #728FA3;
+  padding:0.6rem;
+  position: absolute;
+  margin-left: -2rem;
+  border-radius: 0.2rem;
+  top: 3rem;
 }
 
 .detail-page {
@@ -31,9 +37,26 @@
   transition: 0.5s;
   overflow-x: hidden;
   flex: 1;
+  padding-top:0.35rem;
 }
 
 .sidebar-content.sidebar-open {
+  /*margin-left: 0.25rem;*/
+  width: 413px;
+  border-left: 1rem solid #728FA3;
+  padding-left: 0.5rem;
+}
+
+.sidebar-handle.sidebar-open {
   margin-left: 0.25rem;
-  width: 300px;
+  width: 359px;
+}
+/*.detail-sidebar::before {*/
+  /*content: "\00BB";*/
+  /*background-color: yellow;*/
+  /*color: red;*/
+  /*font-weight: bold;*/
+/*}*/
+.angle-icon {
+  color: white;
 }
