--- a/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.html
+++ b/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.html
@@ -1,16 +1,25 @@
 <div class="sidebar-content">
-
-  <h4>Participant {{ participant?.participantId }}</h4>
-  <hr/>
+  <h4 class="participant-color">Participant {{ participant?.participantId }}</h4>
   <div class="demographics-info">
-    <div>DOB: {{ participant.birthDate }}</div>
-    <div>Gender: {{ participant.gender | titlecase }}</div>
-    <div>Race: {{ participant.race }}</div>
-    <div>Ethnicity: {{ participant.ethnicity }}</div>
+    <div class="participant-flex">
+      <div class="participant-info">DOB:&nbsp;</div>
+      <div>{{ participant.birthDate }}</div>
+    </div>
+    <div class="participant-flex">
+      <div class="participant-info">Gender:&nbsp; </div>
+      <div>{{ participant.gender | titlecase }}</div>
+    </div>
+    <div class="participant-flex">
+      <div class="participant-info">Race:&nbsp; </div>
+      <div>{{ participant.race }}</div>
+    </div>
+    <div class="participant-flex">
+      <div class="participant-info">Ethnicity:&nbsp; </div>
+      <div>{{ participant.ethnicity }}</div>
+    </div>
   </div>
-  <hr/>
 
-  <h4>Participant Status</h4>
+  <h4 class="participant-color">Participant Status</h4>
   <app-participant-status [participant]="participant">
   </app-participant-status>
 
