--- a/ui/src/app/cohort-review/annotation-item/annotation-item.component.html
+++ b/ui/src/app/cohort-review/annotation-item/annotation-item.component.html
@@ -1,95 +1,99 @@
-<div class="wrapper">
-  <ng-container [ngSwitch]="annotation.definition.annotationType">
-
+<div>
+  <div [ngSwitch]="annotation.definition.annotationType">
     <!-- STRING, DATE, INTEGER all rely on the blur event to update the annotation -->
     <div *ngSwitchCase="kinds.STRING">
-      <label [for]="machineName" class="flex-container">
-        <span class="flex-content-main">
+      <div class="text-container">
+        <label [for]="machineName" >
+        <span class="flex-content-main items-text">
           {{ annotation.definition.columnName }}
-          <em>{{ datatypeDisplay | titlecase }}</em>
         </span>
-        <clr-icon shape="caret" dir="down" (click)="toggleExpandText()"></clr-icon>
-      </label>
-      <input *ngIf="!expandText"
-        type="text"
-        (blur)="handleInput()"
-        [name]="machineName"
-        [id]="machineName"
-        [formControl]="control">
-        <textarea *ngIf="expandText"
-          (blur)="handleInput()"
+            <span  *ngIf="textSpinnerFlag" class="spinner spinner-inline spinner-md spin-in-overlay"> Loading...   </span>
+           <span><clr-icon *ngIf="successIcon" class="success is-solid" shape="success-standard" ></clr-icon></span>
+        </label>
+      </div>
+        <textarea
+          class="textarea-wrapper"
+          (blur)="textBlur()"
           [name]="machineName"
           [id]="machineName"
           [formControl]="control">
         </textarea>
     </div>
-
     <div *ngSwitchCase="kinds.DATE">
-      <label [for]="machineName" class="flex-container">
-        <span class="flex-content-main">
+        <div class="text-container">
+            <label [for]="machineName">
+        <span class="flex-content-main items-date">
           {{ annotation.definition.columnName }}
-          <em>{{ datatypeDisplay | titlecase }}</em>
         </span>
-      </label>
-      <input
-        (blur)="handleInput()"
-        type="date"
-        [name]="machineName"
-        [id]="machineName"
-        [formControl]="control">
+                <span *ngIf="textSpinnerFlag" class="spinner spinner-inline spinner-md spin-in-overlay"> Loading...   </span>
+                <span><clr-icon *ngIf="successIcon" class="success is-solid" shape="success-standard" ></clr-icon></span>
+            </label>
+        </div>
+      <div (click)=" dateChange(myDate)" >
+        <input class="modifier-calender" [ngModel]="myDate | date:'yyyy-MM-dd'"
+               (ngModelChange)="myDate = $event" [name]="machineName" [id]="machineName" [formControl]="control"  placeholder="YYYY-MM-DD" type="date" clrDate>
+      </div>
     </div>
-
-    <div *ngSwitchCase="kinds.INTEGER">
-      <label [for]="machineName" class="flex-container">
-        <span class="flex-content-main">
-          {{ annotation.definition.columnName }}
-          <em>{{ datatypeDisplay | titlecase }}</em>
-        </span>
-      </label>
+    <div *ngSwitchCase="kinds.INTEGER" class="text-container">
+        <div class="integer-container">
+            <label [for]="machineName">
+            <span class="flex-content-main items-integer">
+              {{ annotation.definition.columnName }}
+            </span>
+            <span *ngIf="textSpinnerFlag" class="spinner spinner-inline spinner-md spin-in-overlay"> Loading...   </span>
+            <span><clr-icon *ngIf="successIcon" class="success is-solid" shape="success-standard" ></clr-icon></span>
+            </label>
+        </div>
       <input
-        (blur)="handleInput()"
+         class="integer-style"
+        (blur)="textBlur()"
         type="number"
         [name]="machineName"
         [id]="machineName"
         [formControl]="control">
     </div>
-
     <!-- ENUM and BOOLEAN rely on the change event to update the annotation -->
     <div *ngSwitchCase="kinds.ENUM">
-      <label [for]="machineName" class="flex-container">
-        <span class="flex-content-main">
+      <label [for]="machineName">
+        <span class="flex-content-main items-enum">
           {{ annotation.definition.columnName }}
-          <em>{{ datatypeDisplay | titlecase }}</em>
         </span>
+        <span *ngIf="textSpinnerFlag" class="spinner spinner-inline spinner-md spin-in-overlay"> Loading...   </span>
+          <span><clr-icon *ngIf="successIcon" class="success is-solid" shape="success-standard" ></clr-icon></span>
       </label>
-      <div class="select">
-        <select
-          (change)="handleInput()"
-          [name]="machineName"
-          [id]="machineName"
-          [formControl]="control">
-          <option value=''><em>No Selection</em></option>
-          <option *ngFor="let value of annotation.definition.enumValues" [value]="value">
-            {{ value | titlecase }}
-          </option>
-        </select>
+      <div>
+        <clr-dropdown  class="participant-dropdown">
+          <button type="button" class="btn btn-outline" clrDropdownTrigger>
+            <span *ngIf = "defaultAnnotation; else elseBlock">{{annotationOption}}</span>
+            <ng-template #elseBlock>
+              <span>Select Operator</span>
+            </ng-template>
+            <clr-icon shape="caret down"></clr-icon>
+          </button>
+          <clr-dropdown-menu   clrPosition="bottom-left" *clrIfOpen>
+            <button [name]="machineName" [id]="machineName"
+                    *ngFor="let value of annotation.definition.enumValues"
+                    (click)="annotationOptionChange(value)"
+                    class="dropdown-item"
+                    type="button"
+                    clrDropdownItem>{{ value | titlecase }}</button>
+          </clr-dropdown-menu>
+        </clr-dropdown>
       </div>
     </div>
-
-    <div *ngSwitchCase="kinds.BOOLEAN">
-      <div class="checkbox-inline flex-container">
-        <input
-          (change)="handleInput()"
+    <div class="checkbox-container" *ngSwitchCase="kinds.BOOLEAN">
+      <label [for]="machineName" class="flex-content-main items-check">
+        {{ annotation.definition.columnName }}
+      </label>
+        <input class="checkbox-style"
+          (change)="textBlur()"
           type="checkbox"
           [name]="machineName"
           [id]="machineName"
           [formControl]="control">
-        <label [for]="machineName" class="flex-content-main">
-          {{ annotation.definition.columnName }}
-          <em>{{ datatypeDisplay | titlecase }}</em>
-        </label>
-      </div>
+        <span *ngIf="textSpinnerFlag" class="spinner spinner-inline spinner-md spin-in-overlay"> Loading...   </span>
+        <span><clr-icon *ngIf="successIcon" class="success is-solid" shape="success-standard" ></clr-icon></span>
     </div>
-
-  </ng-container>
 </div>
+</div>
+
