--- a/ui/src/app/cohort-review/set-annotation-item/set-annotation-item.component.html
+++ b/ui/src/app/cohort-review/set-annotation-item/set-annotation-item.component.html
@@ -2,9 +2,6 @@
   <span class="name">
     <span *ngIf="!editing" class="name-display">
       {{ definition.columnName }}
-      <button type="button" class="btn btn-sm btn-link" (click)="edit()">
-        <clr-icon shape="pencil"></clr-icon>
-      </button>
     </span>
     <input *ngIf="editing"
       #nameInput
@@ -16,10 +13,15 @@
       (keyup.enter)="saveEdit()"
       (keyup.esc)="cancelEdit($event)">
   </span>
-  <span class="type">
-    {{ definition.annotationType | titlecase }}
-  </span>
-  <button type="button" class="btn btn-sm btn-link text-danger" (click)="delete()">
-    <clr-icon shape="remove" size="16"></clr-icon>
+
+  <button type="button" class="btn btn-sm btn-link" (click)="edit()">
+    RENAME
+    <!--<clr-icon shape="pencil" size="22"></clr-icon>-->
+  </button>
+  <span class="divider">|</span>
+  <button type="button" class="btn btn-sm btn-link" (click)="delete()">
+    DELETE
+    <!--<clr-icon shape="minus-circle" size="22"></clr-icon>-->
   </button>
 </div>
+
