--- a/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.css
+++ b/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.css
@@ -1,5 +1,6 @@
 .sidebar-content {
   padding-right: 0.25rem;
+  position: relative;
 }
 
 .sidebar-content h4 {
@@ -8,4 +9,19 @@
 
 .demographics-info {
   color: #111;
+  margin-bottom: 1.5rem;
+}
+
+.sidebar-content .participant-color {
+  color: #224F83;
+  font-weight: bold;
+  padding-bottom: 0.3rem;
+}
+
+.sidebar-content .participant-info {
+  font-weight:bold
+}
+
+.sidebar-content .participant-flex {
+  display: flex;
 }
