--- a/ui/src/app/views/rename-modal/component.html
+++ b/ui/src/app/views/rename-modal/component.html
@@ -12,6 +12,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-outline" (click)="renaming=false">Cancel</button>
-        <button type="button" class="btn btn-primary confirm-delete-btn" (click)="this.receiveRename.emit({name: resource.name, newName: newName});">Rename {{resourceType}}</button>
+        <button type="button" class="btn btn-primary confirm-rename-btn" id="rename" (click)="this.receiveRename.emit({name: resource.name, newName: newName});">Rename {{resourceType}}</button>
     </div>
 </clr-modal>
