--- a/ui/src/app/cohort-search/tree/tree.component.css
+++ b/ui/src/app/cohort-search/tree/tree.component.css
@@ -16,31 +16,21 @@
 
 .dropdown-search-container {
   display: flex;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
 }
 
 .condition-dropdown{
-  padding-right: 3rem;
-  width:30%;
+  padding-right: 1.5rem;
+  /*width:30%;*/
 }
 
 .search-container {
-  width:70%;
+  width:100%;
 }
 
 .search-width {
   width:100%;
 }
 
-.dropdown, .dropdown .dropdown-toggle{
-  text-align: left;
-  width: 8.5rem;
-}
 
-/*.btn-info-outline .btn, .btn-outline .btn, .btn.btn-info-outline, .btn.btn-outline, .btn.btn-outline-info, .btn.btn-outline .btn {*/
-  /*border : 1px solid #C3C3C3;*/
-  /*color: #4A4A4A;*/
-/*}*/
-
-.dropdown .dropdown-toggle.btn clr-icon[shape^=caret] {
-  color: #C3C3C3;
-}
