--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -7,43 +7,18 @@
   <clr-icon shape="error-standard"></clr-icon>
   <em>Failed to Load Criteria</em>
 </div>
-
 <!--dropdown for conditions start-->
 <div class="dropdown-search-container">
   <div [ngClass]="{'condition-dropdown' : showDropDown()}">
     <ng-container *ngIf = "showDropDown() && !loading">
-
-
-      <!--<clr-dropdown>-->
-        <!--<button type="button" class="btn btn-outline-primary" clrDropdownTrigger>-->
-          <!--Dropdown-->
-          <!--<clr-icon shape="caret down"></clr-icon>-->
-        <!--</button>-->
-        <!--<clr-dropdown-menu *clrIfOpen>-->
-          <!--<ng-container *ngFor="let criteria of domainTypes">-->
-            <!--<button *ngIf="criteria.name ==='ICD9 Codes' || criteria.name ==='ICD10 Codes' "-->
-                    <!--id="criteria.type"-->
-                    <!--class="dropdown-item"-->
-                    <!--type="button"-->
-                    <!--(click)="launchTree(criteria)"-->
-                    <!--clrDropdownItem>{{criteria.name}}</button>-->
-          <!--</ng-container>-->
-
-        <!--</clr-dropdown-menu>-->
-      <!--</clr-dropdown>-->
-
-<app-crit-dropdown (onOptionChange)="optionChange($event)"></app-crit-dropdown>
+    <app-crit-dropdown (onOptionChange)="optionChange($event)" [selectedType] = "name"></app-crit-dropdown>
     </ng-container>
   </div>
-
-  {{showDropDown()}}
-<div [ngClass]="showDropDown()? 'search-container' :'search-width'" >
-  <app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
+  <div [ngClass]="showDropDown()? 'search-container' :'search-width'" >
+    <app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
+  </div>
 </div>
-
-</div>
-
 <div *ngIf="numMatches > 1">
   <b>Note:</b> There are {{numMatches}} matches for your search
 </div>
-<crit-node *ngFor="let item of children" [node]="item" [testChange] = 'testOptionChange'></crit-node>
+<crit-node *ngFor="let item of children" [node]="item"></crit-node>
