--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -13,7 +13,9 @@
   </button>
 
   <!-- CODE -->
-  <div class="code font-weight-bold" [innerHTML]="displayCode | safeHtml">
+  <div class="code font-weight-bold"
+       [class.search-keyword]="matched"
+       [innerHTML]="displayCode | safeHtml">
     {{ displayCode }}
   </div>
 
@@ -24,6 +26,7 @@
     [popperPlacement]="'bottom'"
     [popperDisabled]="!isTruncated"
     class="name text-muted"
+    [class.search-keyword]="matched"
     [innerHTML]="displayName | safeHtml"></div>
 
   <!-- COUNT -->
