--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -17,6 +17,9 @@
   <div *ngIf="multiIngredient">
     <b>Note:</b> This drug is multi-ingredient
   </div>
+  <div *ngIf="numMatches > 1">
+    <b>Note:</b> There are {{numMatches}} matches for your search
+  </div>
   <div *ngIf="options.length" class="dropdown-menu">
     <button
       *ngFor="let option of options"
